add light and dark feature